items no longer overflow from containers

--- a/pokeStyles.css
+++ b/pokeStyles.css
@@ -39,7 +39,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 10px;
-  height: 10rem;
+  height: auto;
   font-size: 20px;
   width: fit-content;
   margin: 0 auto;
@@ -139,7 +139,7 @@ body {
   letter-spacing: 0.15rem;
   font-size: 25px;
   margin: 5px auto;
-  width: 75%;
+  min-width: 50%;
   background-color: #adebad;
 }
 
